update add process edges

--- a/string-model-1.ipynb
+++ b/string-model-1.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import boolean_model_helper as bm\n",
-    "from string_model_builder import string2definition1, add_process_edgelist, add_mtb_edgelist"
+    "from string_model_builder import string2definition1, add_process_edgelist1, add_mtb_edgelist"
    ]
   },
   {
