--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_process_edgelist(definition, edgelist, initial_process_value):\n",
+    "def add_process_edgelist1(definition, edgelist, initial_process_value):\n",
     "    df = pd.read_csv(edgelist)\n",
     "    \n",
     "    # get list of nodes\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        " 'XPO5': ['RAN']}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,21 +484,23 @@
    "source": [
     "node_inputs\n",
     "\n",
-    "# remove nodes in a complex\n",
-    "for components in complex_inputs.values():\n",
-    "    for node in node_inputs.keys():\n",
-    "        if node in components:\n",
-    "            del node_inputs[node]\n",
-    "            continue\n",
-    "\n",
-    "# replace complex nodes\n",
-    "for node, inputs in node_inputs.items():\n",
-    "    for complex, components in complex_inputs.items():\n",
-    "        for i, input in enumerate(inputs):\n",
-    "            if input in components:\n",
-    "                node_inputs[node][i] = complex\n",
+    "def reduce_complexes(node_inputs, complex_inputs):\n",
+    "    # remove nodes in a complex\n",
+    "    for components in complex_inputs.values():\n",
+    "        for node in node_inputs.keys():\n",
+    "            if node in components:\n",
+    "                del node_inputs[node]\n",
     "                continue\n",
-    "    node_inputs[node] = list(set(node_inputs[node]))\n",
+    "\n",
+    "    # replace complex nodes\n",
+    "    for node, inputs in node_inputs.items():\n",
+    "        for complex, components in complex_inputs.items():\n",
+    "            for i, input in enumerate(inputs):\n",
+    "                if input in components:\n",
+    "                    node_inputs[node][i] = complex\n",
+    "                    continue\n",
+    "        node_inputs[node] = list(set(node_inputs[node]))\n",
+    "    return node_inputs\n",
     "\n",
     "node_inputs # get OR'd"
    ]
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,21 +576,8 @@
     "        inputs = list(df_complexes[df_complexes.complex == complex].node)\n",
     "        complex_inputs[complex] = inputs\n",
     "\n",
-    "    # remove nodes in a complex\n",
-    "    for components in complex_inputs.values():\n",
-    "        for node in node_inputs.keys():\n",
-    "            if node in components:\n",
-    "                del node_inputs[node]\n",
-    "                continue\n",
-    "\n",
-    "    # replace complex nodes\n",
-    "    for node, inputs in node_inputs.items():\n",
-    "        for complex, components in complex_inputs.items():\n",
-    "            for i, input in enumerate(inputs):\n",
-    "                if input in components:\n",
-    "                    node_inputs[node][i] = complex\n",
-    "                    continue\n",
-    "        node_inputs[node] = list(set(node_inputs[node]))   \n",
+    "    # reduce complexes\n",
+    "    node_inputs = reduce_complexes(node_inputs, complex_inputs)\n",
     "    \n",
     "    # OR the nodes\n",
     "    rules = []\n",
@@ -619,7 +608,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "definition2 = string2definition2('string-network-1.csv', 'string-1-complexes.csv', True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_process_edgelist2(definition, edgelist, complexes, initial_value):\n",
+    "    df = pd.read_csv(edgelist)\n",
+    "    \n",
+    "    # get list of nodes\n",
+    "    nodes = df.process.unique()\n",
+    "\n",
+    "    # build dict of node inputs\n",
+    "    node_inputs = {}\n",
+    "    for node in nodes:\n",
+    "        inputs = list(df[df.process == node].node)\n",
+    "        node_inputs[node] = inputs\n",
+    "    \n",
+    "    # get list of complexes \n",
+    "    complexes = list(df_complexes.complex.unique())\n",
+    "\n",
+    "    # build dict of complexes\n",
+    "    complex_inputs = {}\n",
+    "    for complex in complexes:\n",
+    "        inputs = list(df_complexes[df_complexes.complex == complex].node)\n",
+    "        complex_inputs[complex] = inputs\n",
+    "    \n",
+    "    # reduce complexes\n",
+    "    node_inputs = reduce_complexes(node_inputs, complex_inputs)\n",
+    "    \n",
+    "    # construct boolean rules as list\n",
+    "    rules = []\n",
+    "    for key, value in node_inputs.items():\n",
+    "        rule = key + ' *= '\n",
+    "        rule = rule + ' and '.join(value)\n",
+    "        rules.append(rule)\n",
+    "        \n",
+    "    # initial conditions\n",
+    "    initial_value = 'True' if initial_value else 'False'\n",
+    "    initial_conditions = []\n",
+    "    for node in (nodes):\n",
+    "        initial_condition = node + ' = ' + initial_value\n",
+    "        initial_conditions.append(initial_condition)\n",
+    "        \n",
+    "    # definition\n",
+    "    return definition + '\\n\\n#process node initial conditions\\n'+'\\n'.join(initial_conditions)+'\\n\\n#process node rules\\n'+'\\n'.join(rules)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -704,12 +750,22 @@
       "CLVS2 *= AP1B1\n",
       "vATPase_complexes *= ATP6V1F and ATP6V1B2 and ATP6V1A and ATP6V1G1 and ATP6V1D and ATP6V1E1 and ATP6V1H\n",
       "ESCRT_complexes *= HGS and CHMP2A and CHMP4B and CHMP2B and CHMP3 and STAM and TSG101\n",
-      "MHC_I_complexes *= B2M and HLA-C and HLA-B and HLA-G and HLA-E and CD8A and CALR and HLA-A\n"
+      "MHC_I_complexes *= B2M and HLA-C and HLA-B and HLA-G and HLA-E and CD8A and CALR and HLA-A\n",
+      "\n",
+      "#process node initial conditions\n",
+      "Phagosome_acidification = True\n",
+      "Phagosome_maturation = True\n",
+      "Phagolysosome_assembly = True\n",
+      "\n",
+      "#process node rules\n",
+      "Phagosome_maturation *= RAB7A and CORO1A and vATPase_complexes\n",
+      "Phagosome_acidification *= RAB7A and vATPase_complexes\n",
+      "Phagolysosome_assembly *= RAB7A and CORO1A\n"
      ]
     }
    ],
    "source": [
-    "print string2definition2('string-network-1.csv', 'string-1-complexes.csv', True)"
+    "print add_process_edgelist2(definition2, 'string-1-process-edgelist.csv', 'string-1-complexes.csv', True)"
    ]
   },
   {
