--- a/string-model-1.ipynb
+++ b/string-model-1.ipynb
@@ -9,17 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import boolean_model_helper as bm\n",
-    "from string_model_builder import string2definition1, add_process_edgelist1, add_mtb_edgelist"
+    "from string_model_builder_1 import string2definition, add_process_edgelist, add_mtb_edgelist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
