--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4                     0           0.747  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,13 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write export helper functions\n",
-    "\n",
-    "def string2definition1(tabular_text_output, initial_node_value, out='model.txt'):\n",
+    "def string2definition(tabular_text_output, initial_value):\n",
+    "    \"\"\"\n",
+    "    model 1\n",
+    "    \"\"\"\n",
     "    df = pd.read_csv(tabular_text_output)\n",
     "    \n",
     "    # get list of nodes\n",
@@ -282,29 +283,31 @@
     "        \n",
     "    # construct initial conditions\n",
     "    initial_conditions = []\n",
+    "    initial_value = 'True' if initial_value else 'False'\n",
     "    for node in nodes:\n",
-    "        initial_condition = node + ' = ' + initial_node_value\n",
+    "        initial_condition = node + ' = ' + initial_value\n",
     "        initial_conditions.append(initial_condition)\n",
     "        \n",
     "    # definition\n",
-    "    definition = '#initial conditions\\n'+'\\n'.join(initial_conditions)+'\\n\\n#rules\\n'+'\\n'.join(rules)\n",
-    "\n",
-    "#     # export\n",
-    "#     fp = open(out, 'w+')\n",
-    "#     fp.write(definition)\n",
-    "#     fp.close()\n",
-    "    \n",
-    "    return definition\n",
-    "        "
+    "    return (\n",
+    "        '#initial conditions\\n'+\n",
+    "        '\\n'.join(initial_conditions)+         \n",
+    "        '\\n\\n'+\n",
+    "        '#rules\\n'+\n",
+    "        '\\n'.join(rules)\n",
+    "    )        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_process_edgelist1(definition, edgelist, initial_process_value):\n",
+    "def add_process_edgelist(definition, edgelist, initial_value):\n",
+    "    \"\"\"\n",
+    "    model 1\n",
+    "    \"\"\"\n",
     "    df = pd.read_csv(edgelist)\n",
     "    \n",
     "    # get list of nodes\n",
@@ -315,7 +318,12 @@
     "    for node in nodes:\n",
     "        inputs = list(df[df.process == node].node)\n",
     "        node_inputs[node] = inputs\n",
-    "        \n",
+    "    \n",
+    "    # remove input nodes not in the network (not modelled)\n",
+    "    for inputs in node_inputs.values():\n",
+    "        for input in inputs:\n",
+    "            if input not in definition: inputs.remove(input)\n",
+    "\n",
     "    # construct boolean rules as list\n",
     "    rules = []\n",
     "    for key, value in node_inputs.items():\n",
@@ -325,26 +333,37 @@
     "        \n",
     "    # construct initial conditions\n",
     "    initial_conditions = []\n",
+    "    initial_value = 'True' if initial_value else 'False'\n",
     "    for node in nodes:\n",
-    "        initial_condition = node + ' = ' + initial_process_value\n",
+    "        initial_condition = node + ' = ' + initial_value\n",
     "        initial_conditions.append(initial_condition)\n",
     "        \n",
     "    # definition\n",
-    "    return definition + '\\n\\n#process node initial conditions\\n'+'\\n'.join(initial_conditions)+'\\n\\n#process node rules\\n'+'\\n'.join(rules)\n"
+    "    return (\n",
+    "        definition + \n",
+    "        '\\n\\n'+\n",
+    "        '#process node initial conditions\\n'+\n",
+    "        '\\n'.join(initial_conditions)+\n",
+    "        '\\n\\n'+\n",
+    "        '#process node rules\\n'+\n",
+    "        '\\n'.join(rules)\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_mtb_edgelist(definition, edgelist, initial_mtb_value):\n",
-    "    df = pd.read_csv(edgelist)\n",
+    "def add_mtb_edgelist(definition, mtb_edgelist, initial_value):\n",
+    "    \"\"\"\n",
+    "    model 1\n",
+    "    \"\"\"\n",
+    "    df = pd.read_csv(mtb_edgelist)\n",
     "\n",
     "    # get list of nodes\n",
     "    target_nodes = df.node.unique()\n",
-    "    mtb_nodes = df.mtb.unique()\n",
     "    \n",
     "    # build dict of node inputs\n",
     "    node_inputs = {}\n",
@@ -352,24 +371,237 @@
     "        inputs = list(df[df.node == node].mtb)\n",
     "        node_inputs[node] = inputs\n",
     "    \n",
+    "    # remove factors without target nodes in the network (not modelled)\n",
+    "    mtb_nodes = []\n",
+    "    for node, mtb in node_inputs.items():\n",
+    "        if node not in definition:\n",
+    "            del node_inputs[node]\n",
+    "        else:\n",
+    "            mtb_nodes+=mtb\n",
+    "            mtb_nodes = list(set(mtb_nodes)) #unique values\n",
+    "\n",
     "    # construct boolean rules as list\n",
     "    rules = []\n",
-    "    for key, value in node_inputs.items():\n",
-    "        rule = key + ' *= ' + key\n",
-    "        rule = rule + ' and not (' +' or '.join(value) + ')'\n",
+    "    for target_node, mtb in node_inputs.items():\n",
+    "        rule = target_node + ' *= ' + target_node # add the inhibition rule recursively\n",
+    "        rule = rule + ' and not (' +' or '.join(mtb) + ')'\n",
     "        rules.append(rule)\n",
     "\n",
     "    # construct initial conditions\n",
     "    initial_conditions = []\n",
+    "    initial_value = 'True' if initial_value else 'False'\n",
     "    for node in mtb_nodes:\n",
-    "        initial_condition = node + ' = ' + initial_mtb_value\n",
+    "        initial_condition = node + ' = ' + initial_value\n",
     "        initial_conditions.append(initial_condition)\n",
     "        \n",
     "    # definition\n",
-    "    return definition + '\\n\\n#mtb node initial conditions\\n'+'\\n'.join(initial_conditions)+'\\n\\n#mtb update rules\\n'+'\\n'.join(rules)\n",
-    "\n",
-    "    "
+    "    return (\n",
+    "        definition + \n",
+    "        '\\n\\n'+\n",
+    "        '#mtb node initial conditions\\n'+\n",
+    "        '\\n'.join(initial_conditions)+\n",
+    "        '\\n\\n'+\n",
+    "        '#mtb update rules\\n'+\n",
+    "        '\\n'.join(rules)\n",
+    "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#initial conditions\n",
+      "AP1B1 = True\n",
+      "ASPSCR1 = True\n",
+      "ATP6V1A = True\n",
+      "ATP6V1B2 = True\n",
+      "ATP6V1D = True\n",
+      "ATP6V1E1 = True\n",
+      "ATP6V1F = True\n",
+      "ATP6V1G1 = True\n",
+      "ATP6V1H = True\n",
+      "B2M = True\n",
+      "CALR = True\n",
+      "CD1B = True\n",
+      "CD1D = True\n",
+      "CD8A = True\n",
+      "CHMP2A = True\n",
+      "CHMP2B = True\n",
+      "CHMP3 = True\n",
+      "CHMP4B = True\n",
+      "CLVS2 = True\n",
+      "DERL1 = True\n",
+      "GGA1 = True\n",
+      "HGS = True\n",
+      "HIP1R = True\n",
+      "HLA-A = True\n",
+      "HLA-B = True\n",
+      "HLA-C = True\n",
+      "HLA-E = True\n",
+      "HLA-G = True\n",
+      "KLRC1 = True\n",
+      "KLRD1 = True\n",
+      "KPNA1 = True\n",
+      "KPNA2 = True\n",
+      "KPNB1 = True\n",
+      "NSFL1C = True\n",
+      "NUTF2 = True\n",
+      "RAB5A = True\n",
+      "RAB7A = True\n",
+      "RAN = True\n",
+      "STAM = True\n",
+      "TSG101 = True\n",
+      "UBXN7 = True\n",
+      "UFD1L = True\n",
+      "VCP = True\n",
+      "VPS33B = True\n",
+      "XPO1 = True\n",
+      "XPO5 = True\n",
+      "\n",
+      "#rules\n",
+      "NUTF2 *= KPNA2 or KPNB1 or RAN\n",
+      "ATP6V1D *= ATP6V1G1 or ATP6V1B2 or ATP6V1E1 or ATP6V1H or ATP6V1F or ATP6V1A\n",
+      "CD1D *= CD1B or B2M\n",
+      "ATP6V1F *= ATP6V1D or ATP6V1E1 or ATP6V1A or ATP6V1B2 or UBXN7 or ATP6V1H or ATP6V1G1\n",
+      "ATP6V1A *= ATP6V1D or ATP6V1E1 or ATP6V1G1 or ATP6V1F or ATP6V1H or ATP6V1B2\n",
+      "KLRD1 *= HLA-E or HLA-A or B2M or KLRC1\n",
+      "HLA-C *= CALR or KPNA2 or CD8A or HLA-G or HLA-A or HLA-B or HLA-E or B2M\n",
+      "HLA-B *= CALR or HLA-C or HLA-E or HLA-A or CD8A or HLA-G or B2M\n",
+      "CHMP4B *= STAM or HGS or TSG101 or CHMP2B or CHMP3 or CHMP2A\n",
+      "TSG101 *= CHMP4B or RAB7A or XPO1 or HIP1R or CHMP2B or CHMP2A or STAM or CHMP3 or HGS\n",
+      "HLA-G *= CALR or HLA-C or HLA-E or HLA-A or CD8A or HLA-B or KLRC1 or B2M\n",
+      "ATP6V1H *= ATP6V1D or ATP6V1E1 or ATP6V1A or ATP6V1B2 or ATP6V1G1 or ATP6V1F\n",
+      "HLA-E *= CALR or HLA-C or CD8A or HLA-A or HLA-G or HLA-B or KLRD1 or KLRC1 or B2M\n",
+      "CHMP2B *= CHMP4B or TSG101 or STAM or HGS or CHMP3 or CHMP2A\n",
+      "B2M *= CALR or CD1B or CD1D or HLA-C or HLA-E or KLRD1 or HLA-A or CD8A or HLA-B or HLA-G or KLRC1 or KPNA2\n",
+      "CHMP2A *= CHMP4B or TSG101 or CHMP2B or HGS or STAM or CHMP3\n",
+      "CHMP3 *= CHMP4B or TSG101 or CHMP2B or HGS or STAM or CHMP2A\n",
+      "CD1B *= CD1D or B2M\n",
+      "STAM *= CHMP4B or TSG101 or CHMP2B or HGS or CHMP3 or CHMP2A\n",
+      "HIP1R *= TSG101 or AP1B1\n",
+      "XPO1 *= TSG101 or RAN\n",
+      "XPO5 *= RAN\n",
+      "VPS33B *= UFD1L\n",
+      "RAN *= NUTF2 or XPO5 or KPNB1 or KPNA1 or XPO1 or KPNA2\n",
+      "DERL1 *= HLA-A or VCP\n",
+      "NSFL1C *= UFD1L or UBXN7 or ASPSCR1 or VCP\n",
+      "AP1B1 *= HIP1R or CLVS2\n",
+      "UBXN7 *= UFD1L or ATP6V1B2 or ASPSCR1 or NSFL1C or ATP6V1F or VCP\n",
+      "HLA-A *= DERL1 or CALR or HLA-C or HLA-E or KLRD1 or HLA-G or HLA-B or KLRC1 or CD8A or B2M\n",
+      "KLRC1 *= HLA-E or KLRD1 or HLA-A or HLA-G or B2M\n",
+      "RAB7A *= TSG101 or RAB5A\n",
+      "RAB5A *= RAB7A or GGA1\n",
+      "KPNA1 *= KPNB1 or RAN\n",
+      "KPNB1 *= NUTF2 or KPNA1 or RAN or KPNA2\n",
+      "HGS *= CHMP4B or TSG101 or CHMP2B or CHMP2A or CHMP3 or STAM\n",
+      "GGA1 *= RAB5A\n",
+      "CD8A *= CALR or HLA-C or HLA-E or HLA-A or HLA-B or HLA-G or B2M\n",
+      "ATP6V1B2 *= ATP6V1D or ATP6V1E1 or ATP6V1A or UBXN7 or ATP6V1H or ATP6V1F or ATP6V1G1\n",
+      "VCP *= DERL1 or UFD1L or UBXN7 or ASPSCR1 or CALR or NSFL1C\n",
+      "ASPSCR1 *= UFD1L or UBXN7 or NSFL1C or VCP\n",
+      "CALR *= VCP or HLA-G or HLA-C or CD8A or HLA-E or HLA-B or HLA-A or B2M\n",
+      "ATP6V1E1 *= ATP6V1D or ATP6V1H or ATP6V1A or ATP6V1F or ATP6V1G1 or ATP6V1B2\n",
+      "KPNA2 *= NUTF2 or KPNB1 or HLA-C or B2M or RAN\n",
+      "ATP6V1G1 *= ATP6V1D or ATP6V1E1 or ATP6V1A or ATP6V1B2 or ATP6V1H or ATP6V1F\n",
+      "UFD1L *= ASPSCR1 or NSFL1C or VPS33B or UBXN7 or VCP\n",
+      "CLVS2 *= AP1B1\n",
+      "\n",
+      "#process node initial conditions\n",
+      "Phagosome_acidification = True\n",
+      "Phagosome_maturation = True\n",
+      "Phagolysosome_assembly = True\n",
+      "\n",
+      "#process node rules\n",
+      "Phagosome_maturation *= RAB7A and ATP6V1A and ATP6V1B2 and ATP6V1D and ATP6V1E1 and ATP6V1F and ATP6V1G1 and ATP6V1H\n",
+      "Phagosome_acidification *= RAB7A and ATP6V1A and ATP6V1B2 and ATP6V1D and ATP6V1E1 and ATP6V1F and ATP6V1G1 and ATP6V1H\n",
+      "Phagolysosome_assembly *= RAB7A\n",
+      "\n",
+      "#mtb node initial conditions\n",
+      "SapM = False\n",
+      "esxH_esxG = False\n",
+      "ndkA = False\n",
+      "esxA = False\n",
+      "PtpA = False\n",
+      "PPE2 = False\n",
+      "\n",
+      "#mtb update rules\n",
+      "RAB7A *= RAB7A and not (ndkA or SapM)\n",
+      "RAB5A *= RAB5A and not (ndkA)\n",
+      "KPNB1 *= KPNB1 and not (PPE2)\n",
+      "HGS *= HGS and not (esxH_esxG)\n",
+      "ATP6V1H *= ATP6V1H and not (PtpA)\n",
+      "VPS33B *= VPS33B and not (PtpA)\n",
+      "B2M *= B2M and not (esxA)\n",
+      "KPNA1 *= KPNA1 and not (PPE2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "definition = string2definition('string-network-1.csv', True)\n",
+    "definition = add_process_edgelist(definition,'string-1-process-edgelist.csv', True)\n",
+    "print add_mtb_edgelist(definition, 'mtb-edgelist.csv', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
