--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +167,7 @@
     "            or_edges.append(node2 if node2 not in components else component2complex[node2])\n",
     "        node_edges_or[node1] = list(set(or_edges)) # unique values\n",
     "\n",
+    "    print components\n",
     "    # generate OR rules\n",
     "    rules = []\n",
     "    for node, edges in node_edges_or.items():\n",
@@ -199,13 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['HGS' 'CHMP2A' 'CHMP4B' 'CHMP2B' 'CHMP3' 'STAM' 'TSG101' 'B2M' 'HLA-C'\n",
+      " 'HLA-B' 'HLA-G' 'HLA-E' 'CD8A' 'CALR' 'HLA-A' 'ATP6V1F' 'ATP6V1B2'\n",
+      " 'ATP6V1A' 'ATP6V1G1' 'ATP6V1D' 'ATP6V1E1' 'ATP6V1H']\n",
       "#initial conditions\n",
       "AP1B1 = True\n",
       "ASPSCR1 = True\n",
