commit before big file name and analysis files refactor

--- a/string-model-3.ipynb
+++ b/string-model-3.ipynb
@@ -244,8 +244,15 @@
    "source": [
     "# plot average\n",
     "avg = bm.average_models(models)\n",
-    "bm.plot_maps([avg], titles=['All mtb factors ON'], \n",
-    "             nodes = processes + mtb, h = 4, top = 0.75, bottom=0.16, left=.16, suptitle='        Average Node State Heatmap')\n",
+    "bm.plot_maps([avg],\n",
+    "             titles=['All mtb factors ON'], \n",
+    "             nodes = processes + mtb,\n",
+    "             h = 4,\n",
+    "             top = 0.75,\n",
+    "             bottom=0.16,\n",
+    "             left=.16,\n",
+    "             suptitle='        Average Node State Heatmap' # white space to centre\n",
+    "            )\n",
     "\n",
     "\n"
    ]
