--- a/string_model_builder.ipynb
+++ b/string_model_builder.ipynb
@@ -309,7 +309,7 @@
     "                # node is a component AND belongs to this complex\n",
     "            else:\n",
     "                node_edges_or[node]=edges # if node is not a complex component store down\n",
-    "        node_edges_or[complex] = list(set(complex_edges)) # store down unique set of edeges foe each complex\n",
+    "        node_edges_or[complex] = list(set(complex_edges)) # store down unique set of edges foe each complex\n",
     "    \n",
     "    for node, edges in node_edges_or.items(): \n",
     "        # now replace edge nodes that are complex components with complex nodes\n",
@@ -1027,6 +1027,18 @@
    "display_name": "rp1",
    "language": "python",
    "name": "rp1"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
