filename refactor - dev files

--- a/model_builder.ipynb
+++ b/model_builder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -134,19 +134,19 @@
        "4                     0           0.747  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('string-network-1.csv')\n",
+    "df = pd.read_csv('string-edgelist.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "       'UFD1L', 'VCP', 'VPS33B', 'XPO1', 'XPO5'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,18 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabular_text_output = 'string-network-1.csv'\n",
-    "complex_map = 'string-1-complex-map.csv'\n",
+    "tabular_text_output = 'string-edgelist.csv'\n",
+    "complex_map = 'complex-map.csv'\n",
     "initial_value = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,18 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "definition = string2definition(tabular_text_output,complex_map,)\n",
-    "edgelist = 'string-1-process-edgelist.csv'\n",
-    "complex_map = 'string-1-complex-map.csv'\n"
+    "edgelist = 'process-edgelist.csv'\n",
+    "complex_map = 'complex-map.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
